# lib/db/src/schema/index.ts
@@ -19,3 +19,4 @@
 
 export * from "./assets";
 export * from "./categories";
+export * from "./site-settings";
